--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,67 @@
-.gradle
-.mvn
-mvnw
-mvnw.cmd
-*.sw?
-.#*
-*#
-*~
-/build
-/code
-.classpath
-.project
-.settings
-.metadata
-.factorypath
-.recommenders
-bin
-build
-lib/
-target
-.factorypath
-.springBeans
-interpolated*.xml
-dependency-reduced-pom.xml
-build.log
-_site/
-.*.md.html
-manifest.yml
-MANIFEST.MF
-settings.xml
-activemq-data
-overridedb.*
+# Created by https://www.gitignore.io/api/java,intellij
+
+### Java ###
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+
 *.iml
+
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
+
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+# .idea/shelf
+
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
+
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
+
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
+
+## File-based project format:
 *.ipr
 *.iws
-.idea
-*.jar
-.DS_Store
-.factorypath
-dump.rdb
-transaction-logs
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+.mvn
