--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 	  <artifactId>eclipselink</artifactId>
 	  <version>2.5.2</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>com.google.code.gson</groupId>
+	  <artifactId>gson</artifactId>
+	  <version>2.7</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
